--- a/locale/bn.json
+++ b/locale/bn.json
@@ -301,5 +301,31 @@
       "markazadmin": "মারকাজ অ্যাডমিন",
       "daye": "দাঈ"
     }
+  },
+  "universalTableShow": {
+    "title": "ইউনিভার্সাল টেবিল শো",
+    "errorFetchingEditRequestStatuses": "এডিট রিকোয়েস্ট স্ট্যাটাস আনতে ত্রুটি",
+    "editDataForDay": "দিনের ডাটা এডিট করুন",
+    "noteYouCanOnlyEditThisDataOnceAfterApproval": "নোট: অনুমোদনের পর এই ডাটা একবারই এডিট করতে পারবেন",
+    "save": "সেভ",
+    "cancel": "বাতিল",
+    "close": "বন্ধ",
+    "motamot": "মতামত",
+    "motamotPopup": "মতামত পপআপ",
+    "label": "লেবেল",
+    "day": "দিন",
+    "edit": "এডিট",
+    "edited": "এডিটেড",
+    "pending": "পেন্ডিং",
+    "rejected": "রিজেক্টেড",
+    "requestEdit": "এডিট রিকোয়েস্ট",
+    "invalidDataForPDFGeneration": "PDF তৈরির জন্য ডাটা সঠিক নয়",
+    "youCanOnlyEditDataOnceAfterApproval": "অনুমোদনের পর ডাটা একবারই এডিট করতে পারবেন",
+    "youCanOnlyEditDataAfterYourRequestHasBeenApproved": "আপনার রিকোয়েস্ট অনুমোদিত হওয়ার পরই ডাটা এডিট করতে পারবেন",
+    "dataUpdatedSuccessfullyYouCannotEditThisDateAgain": "ডাটা সফলভাবে আপডেট হয়েছে। এই তারিখটি আবার এডিট করতে পারবেন না।",
+    "failedToSaveEditsPleaseTryAgain": "এডিট সংরক্ষণ ব্যর্থ হয়েছে। আবার চেষ্টা করুন।",
+    "youCannotRequestEditsForFutureDates": "ভবিষ্যতের তারিখের জন্য এডিট রিকোয়েস্ট করা যাবে না",
+    "editRequestSubmittedSuccessfullyPleaseWaitForAdminApproval": "এডিট রিকোয়েস্ট সফলভাবে জমা হয়েছে। অ্যাডমিন অনুমোদনের জন্য অপেক্ষা করুন।",
+    "failedToSubmitEditRequestPleaseTryAgain": "এডিট রিকোয়েস্ট জমা ব্যর্থ হয়েছে। আবার চেষ্টা করুন।"
   }
 }
